Issue #556458: Remove 'nowrap' attributes and inline CSS in store status table.

--- a/uc_store/uc_store.css
+++ b/uc_store/uc_store.css
@@ -33,6 +33,19 @@
   width: 0px;
 }
 
+.uc-store-status td {
+  vertical-align: top;
+}
+
+.uc-store-status td.title {
+  font-weight: bold;
+  white-space: nowrap;
+}
+
+.uc-store-status td.message {
+  width: 100%;
+}
+
 /**
  * CSS rules for address fields.
  */
